--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 #logo{
     margin: 34px 45px;
+ 
 }
 #logo img{ 
     height: 80px;
@@ -64,7 +65,7 @@
     content: "";
     position: absolute;
     height: 642px;
- background:url('image/internet-gadfafe8f9_1920.jpg') no-repeat center center/cover;
+ background:url('internet-gadfafe8f9_1920.jpg') no-repeat center center/cover;
     width: 100%;
     top: 0px;
     z-index: -1;
@@ -84,20 +85,52 @@
     #services{
         margin: 34px;
         display: flex;
+        padding: auto;
     }
     
     #services .box{
         border: 2px solid brown;
-        padding: 34px;
-        margin: 3px 6px;
+        padding: 39px;
+                margin: 2px 9px;
         border-radius: 28px;
-        background-color: #f2f2f2;
+        background-color:linen;
     }
     #services .box img{
         height: 160px;
+        border-radius: 75px;
         margin: auto;
         display: block;
     }
+    /* smartphone section */
+    #smartphone{
+      margin: 34px;
+      display:flex;
+    }
+    #smartphone .phone img{
+      height: 200px;
+      margin: 2px;
+      display:block;
+      border: 3px rgb(98, 2, 124);
+      border-style: double;
+      border-radius: 20px;
+  }
+  
+    #smartphone .phone{
+      border: 2px solid rgb(98, 2, 121);
+      padding: 29px;
+      margin: 3px 6px;
+      border-radius: 24px;
+      background-color: rgba(240, 222, 240, 0.918);
+
+    }
+    #smartphone p{
+      text-align: center;
+          }
+          #smartphone h3{
+                text-align: center;
+                text-decoration: solid;
+          }
+
   /* client section */
   #client-section{
     position: relative;
@@ -107,7 +140,7 @@ height: 344px;
   #client-section::before{
   content: "";
   position: absolute;
-  background:url("image/delivery-g0c90fcc9f_1920.jpg")no-repeat center center/cover;
+  background:url("delivery-g0c90fcc9f_1920.jpg")no-repeat center center/cover;
   width: 100%;
   height:100%;
   z-index: -1;
@@ -116,18 +149,21 @@ height: 344px;
   #clients{
     display: flex;
     justify-content: center;
-    align-items: center;
+   
   }
   .client-item{
     padding: 34px;
+    
   }
 
   #clients img{
    height: 120px;
    border-radius: 75px;
+    }
 
-  }
+
   /* contact section */
+
   #contact{
     position: relative;
   }
@@ -154,12 +190,13 @@ height: 344px;
   #contact::before{
     content: "";
     position: absolute;
-    background:url("image/contact-us-g8866f4000_1920.jpg")no-repeat center center/cover;
+    background:url("contact-us-g8866f4000_1920.jpg")no-repeat center center/cover;
     width: 100%;
     height:100%;
     z-index: -1;
     opacity: 0.3;
   }
+  /* footer section */
 footer{
     background-color: black;
     color: white;
@@ -171,6 +208,7 @@ footer{
  .h-primary{
     font-size: 3.8rem;
     padding:12px;
+    color: rgb(41, 39, 39);
  }
  
  .h-secondary{
@@ -187,18 +225,7 @@ footer{
   border-radius: 10px;
   cursor: pointer;
  }
- .cbtn{
- padding:6px 20px;
- position:absolute;
- justify-content: center;
-  /* border:2px solid white; */
-  color:wheat;
-  margin:15px;
-  cursor: pointer;
-  /* border-radius: 10px; */
-  font-size: 1.5rem;
-
- }
+ 
  .center{
     text-align: center;
  }
